competitions/hsf-competitions-master/spongebob-hsf/kube/bikinibottom.yaml
apiVersion: v1
kind: Service
metadata:
  name: bikinibottom-svc
  namespace: challenges
  labels:
    app: bikinibottom
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 80
    protocol: TCP
  selector:
    app: bikinibottom
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bikinibottom-svc
  namespace: challenges
  labels:
    app: bikinibottom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bikinibottom
  template:
    metadata:
      labels:
        app: bikinibottom
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: bikinibottom
        image: bikinibottom:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Never
        securityContext:
          allowPrivilegeEscalation: false
          runAsUser: 0
      imagePullSecrets:
      - name: regcred
